# hinemos

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY_AWS_COMPOSE.md  DEPLOY_AWS_HOST.md  Dockerfile  Makefile  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/admin-protocol/: Cargo.toml
crates/admin-protocol/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: account.rs  admission.rs  commerce.rs  config.rs  dispatch.rs  events.rs  hunger.rs  identity.rs  inbox.rs  lib.rs  memory.rs  messages.rs  registration.rs  request.rs  resident_loop.rs  rooms.rs  service.rs  state.rs  tests.rs
crates/app/src/commerce/: contracts.rs  rendering.rs  results.rs  service.rs
crates/app/src/dispatch/: account_admission.rs  commerce.rs  events.rs  inbox.rs  messaging.rs  payment.rs  read.rs  request_mapping.rs  route.rs  semantic.rs  service_room.rs
crates/app/src/tests/: account.rs  admission.rs  commerce.rs  config.rs  fixtures_basic.rs  fixtures_rooms.rs  memory.rs  registration.rs  rooms.rs  state.rs
crates/blackstone/: Cargo.toml
crates/blackstone/src/: command.rs  error.rs  lib.rs
crates/builtin-rooms/: Cargo.toml
crates/builtin-rooms/src/: definitions.rs  effects.rs  lib.rs  polling.rs
crates/builtin-rooms/tests/: runner.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  rooms_service.rs
crates/cli/src/rooms_service/: definitions.rs  effects.rs  polling.rs
crates/cli/tests/: agent_learning.rs  agent_task_context.rs  blackstone_agent_behavior.rs  builtin_rooms_flow.rs  claude_world_behavior.rs  commerce_flow.rs  llm_world_behavior.rs  mail_sidecar.rs  marriage_registry_flow.rs  messaging_flow.rs  parcel_blueprints.rs  ssh_error_handling.rs  tavern_flow.rs  view_chat.rs  workers_wage_flow.rs
crates/cli/tests/common/: assertions.rs  database.rs  env.rs  llm.rs  mod.rs  process.rs  server.rs  ssh.rs  temp.rs
crates/cli/tests/messaging_flow/: early.rs  late.rs
crates/cli/tests/ssh_error/: early.rs  late.rs  support.rs
crates/core/: Cargo.toml
crates/core/src/: agent_task.rs  agent_task_match.rs  agent_task_tests.rs  command.rs  grid_map.rs  ids.rs  lib.rs  model.rs  observation.rs  sample_world.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/protocol/http/: Cargo.toml
crates/protocol/http/src/: lib.rs
crates/protocol/ssh/: Cargo.toml
crates/protocol/ssh/src/: admin.rs  auth.rs  config.rs  handler.rs  handler_business.rs  handler_helpers.rs  handler_io.rs  handler_memory.rs  handler_observation.rs  handler_task.rs  inbox_notify.rs  lib.rs  lib_tests.rs  mail.rs  mail_protocol.rs  main.rs  presence.rs  render.rs  render_map.rs  render_tests.rs  runtime_state.rs
crates/protocol/ssh/src/handler/: session.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: admin_ipc.rs  client_shell.rs  client_shell_natural.rs  client_shell_tests.rs  client_shell_text.rs  grid.rs  grid_tests.rs  lib.rs  reload.rs
crates/storage/: Cargo.toml
crates/storage/src/: accounts.rs  app_traits.rs  error.rs  identities.rs  lib.rs  messages.rs  parcels.rs  room_mail.rs  schema.rs  storage_badges.rs  storage_ext.rs  storage_mailing_lists.rs  storage_marriage.rs  storage_memory.rs  storage_parcel.rs  storage_payments.rs  storage_rooms.rs  storage_shop.rs  types.rs
crates/storage/src/app_traits/: commerce.rs  hunger.rs  inbox.rs  memory_message.rs  rooms.rs  state.rs
crates/storage/tests/: account_role_card.rs  marriage.rs  parcel_badges.rs  parcel_mailing_lists.rs  schema_migrations.rs  self_models.rs  shop_badges.rs  shop_mailing_lists.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: assertions.rs  database.rs  env.rs  lib.rs  process.rs  temp.rs
docs/: current-project-status-report.md  haproxy-edge-deployment.md
docs/migrations/: 2026-07-21-payment-requests-idempotent.sql
docs/parcel-blueprints/: newspaper.json  newspaper.md
docs/shop-blueprints/: newspaper.json  newspaper.md
rooms/bank/: Cargo.toml
rooms/bank/src/: lib.rs
rooms/blackstone/: Cargo.toml
rooms/blackstone/src/: lib.rs
rooms/libhinemos-room/: Cargo.toml
rooms/libhinemos-room/src/: lib.rs
rooms/newspaper/: Cargo.toml
rooms/newspaper/src/: lib.rs
rooms/registry/: Cargo.toml
rooms/registry/src/: lib.rs
rooms/school/: Cargo.toml
rooms/school/src/: lib.rs
rooms/workers/: Cargo.toml
rooms/workers/src/: lib.rs
scripts/: host-release-build.sh  install-host-database.sh  install-host-http-service.sh  install-host-service.sh  landing_agent_matrix.sh
web/landing/: Cargo.toml  README.md  guide.html  index.html  llm.txt  llms.txt
web/landing/src/: main.rs
worlds/sample/: entities.ron  meta.ron  players.ron  rooms.ron  views.ron
