[workspace]
members = [
    "crates/admin-protocol",
    "crates/app",
    "crates/cli",
    "crates/core",
    "crates/runtime",
    "crates/storage",
    "crates/protocol/http",
    "crates/protocol/ssh",
    "rooms/bank",
    "rooms/blackstone",
    "rooms/libhinemos-room",
    "rooms/school",
    "rooms/workers",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
