[workspace]
members = [
    "crates/admin-protocol",
    "crates/app",
    "crates/builtin-rooms",
    "crates/cli",
    "crates/core",
    "crates/runtime",
    "crates/storage",
    "crates/test-support",
    "crates/protocol/http",
    "crates/protocol/ssh",
    "rooms/bank",
    "rooms/blackstone",
    "rooms/libhinemos-room",
    "rooms/newspaper",
    "rooms/registry",
    "rooms/school",
    "rooms/workers",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
