[workspace]
members = [
    "crates/admin-protocol",
    "crates/app",
    "crates/cli",
    "crates/core",
    "crates/runtime",
    "crates/storage",
    "crates/test-support",
    "crates/protocol/http",
    "crates/protocol/ssh",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
