[package]
name = "hinemos-app"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.102"
hinemos-core = { version = "0.1.0", path = "../core" }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.19"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
