[package]
name = "hinemos-builtin-rooms"
version = "0.1.0"
edition = "2024"

[dependencies]
blackstone-izakaya = { path = "../../rooms/blackstone" }
hinemos-bank-room = { path = "../../rooms/bank" }
hinemos-newspaper-room = { path = "../../rooms/newspaper" }
hinemos-school-room = { path = "../../rooms/school" }
hinemos-storage = { version = "0.1.0", path = "../storage" }
libhinemos-room = { path = "../../rooms/libhinemos-room" }
registry-room = { path = "../../rooms/registry" }
workers-society-room = { path = "../../rooms/workers" }
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["time"] }
