[package]
name = "hinemos-storage"
edition.workspace = true
version.workspace = true

[dependencies]
hinemos-core = { version = "0.1.0", path = "../core" }
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
thiserror = "2.0.18"
