[package]
name = "hinemos-storage"
edition.workspace = true
version.workspace = true

[dependencies]
hinemos-core = { version = "0.1.0", path = "../core" }
hinemos-app = { version = "0.1.0", path = "../app" }
dadoes = { git = "https://huggingface.co/ElderRyan/DADOES", rev = "f402098e9e431da208c805d9ae33a8e2110527b6" }
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
