[package]
name = "hinemos-landing"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
gloo-net = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.83", features = ["Document", "Element", "HtmlInputElement", "InputEvent", "SubmitEvent", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
