[package]
name = "hinemos-ssh"
edition.workspace = true
version.workspace = true

[dependencies]
hinemos-admin-protocol = { version = "0.1.0", path = "../../admin-protocol" }
hinemos-app = { version = "0.1.0", path = "../../app" }
hinemos-core = { version = "0.1.0", path = "../../core" }
hinemos-runtime = { version = "0.1.0", path = "../../runtime" }
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
rand = "0.10.1"
ron = "0.12.1"
russh = "0.60.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hinemos-storage = { version = "0.1.0", path = "../../storage" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.52.3", features = ["full"] }
